--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,244 @@
-* {
+body {
   font-family: "Libre Franklin", sans-serif;
+  margin: 0;
+  background-color: rgb(233, 233, 233);
 }
 
 #container {
   display: flex;
 }
 
-.header-text {
+#forms {
+  width: 650px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#header-text {
   font-size: 36px;
   font-weight: bold;
+  text-decoration: underline;
+}
+
+#personal-form-container {
+  height: 400px;
+  width: 350px;
+  box-shadow: 5px 5px 5px grey;
+  background-color: white;
+  border-radius: 40px;
+  padding: 30px;
+  margin-bottom: 30px;
+}
+
+#personal-form {
+  display: flex;
+  flex-direction: column;
+}
+
+#personal-form-container > h2,
+#skills-form-container > h2,
+#experience-form-container > h2 {
+  text-decoration: underline;
+  font-size: 24px;
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
+#personal-form > label {
+  margin-bottom: 10px;
+}
+
+#personal-form > input {
+  margin-bottom: 20px;
+  border: none;
+  background-color: rgb(243, 243, 243);
+  height: 35px;
+  font-size: 18px;
+  border-radius: 10px;
+  padding: 5px;
+}
+
+#resume-container {
+  width: 850px;
+  padding: 30px;
+  display: flex;
+  justify-content: center;
+}
+
+#resume-display {
+  background-color: white;
+  width: 700px;
+  height: 1000px;
+  box-shadow: 5px 5px 5px grey;
+}
+
+#resume-personal {
+  width: 700px;
+  height: 160px;
+  background-color: rgb(195, 240, 255);
+}
+
+#resume-personal > h1 {
   text-align: center;
+  margin: 0;
+  padding-top: 30px;
+}
+
+#other-personal {
+  display: flex;
+  padding: 20px;
+  justify-content: space-evenly;
+}
+
+#other-personal > img {
+  width: 30px;
+}
+
+#skills-form-container {
+  width: 350px;
+  box-shadow: 5px 5px 5px grey;
+  background-color: white;
+  border-radius: 40px;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
+}
+
+#add-skills,
+#add-experience {
+  background-color: rgb(225, 225, 225);
+  font-size: 30px;
+  align-self: flex-end;
+  border: 2px solid;
+  border-radius: 10px;
+  width: 45px;
+  box-shadow: 0 3px rgb(156, 156, 156);
+}
+
+#add-skills:active {
+  transform: translateY(2px);
+  box-shadow: 0 1px rgb(156, 156, 156);
+}
+
+#skills-header {
+  display: flex;
+  flex-direction: column;
+}
+
+#skills-header > h1 {
+  background-color: rgb(210, 210, 210);
+  text-align: center;
+  width: 300px;
+  padding: 10px 0px;
+  align-self: center;
+  margin-bottom: 0;
+}
+
+#skills-header > ul {
+  font-size: 18px;
+  padding-left: 60px;
+}
+
+#skills-header > ul > li {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.input {
+  display: flex;
+  height: 35px;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.skill-input {
+  height: 32px;
+  flex: 1;
+  font-size: 20px;
+  padding-left: 10px;
+  border: none;
+  background-color: rgb(244, 244, 244);
+  border-radius: 20px;
+}
+
+.skill-delete {
+  width: 50px;
+  background-color: white;
+  border: none;
+}
+
+.skill-delete:hover {
+  transform: translateX(-2px) translateY(-2px);
+  box-shadow: 2px 2px rgb(156, 156, 156);
+  background-color: rgb(255, 186, 186);
+}
+
+#experience-form-container {
+  width: 350px;
+  box-shadow: 5px 5px 5px grey;
+  background-color: white;
+  border-radius: 40px;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
+}
+
+#experience-header {
+  display: flex;
+  flex-direction: column;
+}
+
+#experience-header > h1 {
+  background-color: rgb(210, 210, 210);
+  text-align: center;
+  width: 300px;
+  padding: 10px 0px;
+  align-self: center;
+  margin-bottom: 0;
+}
+
+#add-experience:active {
+  transform: translateY(2px);
+  box-shadow: 0 1px rgb(156, 156, 156);
+}
+
+.experience-container {
+  padding: 10px 40px;
+}
+
+.each-exp-header > h2,
+.each-exp-header > h3 {
+  margin-bottom: 5px;
+}
+
+.each-exp-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.exp-position {
+  margin: 0;
+  font-style: italic;
+  margin-bottom: 5px;
+}
+
+.exp-description {
+  margin: 0;
+}
+
+.experience-delete {
+  width: 50px;
+  background-color: white;
+  border: none;
+  margin-bottom: 30px;
+}
+
+.experience-delete:hover {
+  transform: translateX(-2px) translateY(-2px);
+  box-shadow: 2px 2px rgb(156, 156, 156);
+  background-color: rgb(255, 186, 186);
 }
