--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ body {
 
 #personal-form-container > h2,
 #skills-form-container > h2,
-#experience-form-container > h2 {
+#experience-form-container > h2 #education-form-container > h2 {
   text-decoration: underline;
   font-size: 24px;
   margin-top: 0;
@@ -107,7 +107,8 @@ body {
 }
 
 #add-skills,
-#add-experience {
+#add-experience,
+#add-education {
   background-color: rgb(225, 225, 225);
   font-size: 30px;
   align-self: flex-end;
@@ -117,7 +118,9 @@ body {
   box-shadow: 0 3px rgb(156, 156, 156);
 }
 
-#add-skills:active {
+#add-skills:active,
+#add-experience:active,
+#add-education:active {
   transform: translateY(2px);
   box-shadow: 0 1px rgb(156, 156, 156);
 }
@@ -187,12 +190,14 @@ body {
   margin-bottom: 30px;
 }
 
-#experience-header {
+#experience-header,
+#education-header {
   display: flex;
   flex-direction: column;
 }
 
-#experience-header > h1 {
+#experience-header > h1,
+#education-header > h1 {
   background-color: rgb(210, 210, 210);
   text-align: center;
   width: 300px;
@@ -201,32 +206,33 @@ body {
   margin-bottom: 0;
 }
 
-#add-experience:active {
-  transform: translateY(2px);
-  box-shadow: 0 1px rgb(156, 156, 156);
-}
-
-.experience-container {
+.experience-container,
+.education-container {
   padding: 10px 40px;
 }
 
 .each-exp-header > h2,
-.each-exp-header > h3 {
+.each-exp-header > h3,
+.each-edu-header > h2,
+.each-edu-header > h3 {
   margin-bottom: 5px;
 }
 
-.each-exp-header {
+.each-exp-header,
+.each-edu-header {
   display: flex;
   justify-content: space-between;
 }
 
-.exp-position {
+.exp-position,
+.edu-qualification {
   margin: 0;
   font-style: italic;
   margin-bottom: 5px;
 }
 
-.exp-description {
+.exp-description,
+.edu-description {
   margin: 0;
 }
 
@@ -241,4 +247,15 @@ body {
   transform: translateX(-2px) translateY(-2px);
   box-shadow: 2px 2px rgb(156, 156, 156);
   background-color: rgb(255, 186, 186);
+}
+
+#education-form-container {
+  width: 350px;
+  box-shadow: 5px 5px 5px grey;
+  background-color: white;
+  border-radius: 40px;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
 }
